Struktur drin mehr grundlagen

--- a/bib/Literaturverzeichnis.bib
+++ b/bib/Literaturverzeichnis.bib
@@ -2,7 +2,7 @@
  author = {Basten, Dirk and Pankratz, Oleg},
  year = {2012},
  title = {Entwicklungserfolg von Informationssystemen},
- pages = {59--61},
+ pages = {59-61},
  volume = {41},
  number = {1},
  journal = {wisu das wirtschaftsstudium}
@@ -20,7 +20,7 @@
 }
 
 
-@misc{DIN.200901,
+@manual{DIN.200901,
  year = {2009},
  title = {Projektmanagement - Projektmanagementsysteme - Teil 5: Begriffe},
  address = {Berlin},
@@ -71,7 +71,7 @@ highest in most project phases.},
  url = {http://web.ebscohost.com/ehost/detail?sid=81bc7f3e-2159-461d-9245-d63a4a8ac1e5\%40sessionmgr104\&vid=5\&hid=108\&bdata=JnNpdGU9ZWhvc3QtbGl2ZQ\%3d\%3d#db=bth\&AN=22287062},
  keywords = {managing projects;critical success/failure factors;project success;organizational variables},
  urldate = {28.02.2013},
- pages = {31--41},
+ pages = {31-41},
  volume = {37},
  number = {4},
  journal = {Project Management Journal}
@@ -84,7 +84,7 @@ highest in most project phases.},
  title = {Project Success: A Cultural Framework},
  url = {http://web.ebscohost.com/ehost/detail?vid=3\&sid=81bc7f3e-2159-461d-9245-d63a4a8ac1e5\%40sessionmgr104\&hid=108\&bdata=JnNpdGU9ZWhvc3QtbGl2ZQ\%3d\%3d#db=bth\&AN=13062360},
  urldate = {28.02.2013},
- pages = {30--47},
+ pages = {30-47},
  volume = {35},
  number = {1},
  journal = {Project Management Journal}
@@ -127,7 +127,7 @@ Copyright of Journal of Enterprise Information Management is the property of Eme
  title = {A Model of Critical Success Factors for Software Projects},
  url = {10.1108/17410391211272829},
  keywords = {CRITICAL success factor;RESEARCH;COMPUTER software;PROJECT management;BUSINESS information services;CONCEPTUAL models;Critical success factors;Information systems;Managing software projects;project success;Team factors},
- pages = {537--558},
+ pages = {537-558},
  volume = {25},
  number = {6},
  issn = {17410398},
@@ -143,6 +143,17 @@ Copyright of Journal of Enterprise Information Management is the property of Eme
  edition = {10},
  publisher = {F.A. Brockhaus},
  isbn = {3-7653-1620-2}
+}
+
+@misc{Angermeier.o.J.,
+ abstract = {Grunds{\"a}tzlich gilt ein Projekt als erfolgreich, wenn es seine Ziele (Ergebnis, Termintreue, Budgettreue) erreicht oder {\"u}bertroffen hat. Neben diesen objektiv messbaren Kriterien h{\"a}ngt die Beurteilung des Projekterfolgs aber auch vom Standpunkt des jeweiligen Stakeholders ab.
+
+Beispielsweise kann auch die Zufriedenheit des Auftraggebers - und die Bezahlung der Abschlussrechnung - als Kriterium f{\"u}r den Projekterfolg herangezogen werden.},
+ author = {Angermeier, Georg},
+ year = {o.J.},
+ title = {Projekterfolg},
+ url = {http://projektmagazin.de/glossarterm/projekterfolg},
+ urldate = {2013-04-03}
 }
 
 
