--- a/kapitel/01_Problemstellung.tex
+++ b/kapitel/01_Problemstellung.tex
@@ -1,11 +1,16 @@
-Bereits seit mehreren Jahrzehnten werden die Faktoren, welche für den Erfolgs von IS-Pro\-jek\-ten verantwortlich sind, untersucht. Dabei wurden unterschiedliche Arten gefunden,
-diese Erfolgsfaktoren in Gruppen einzuordnen, sprich zu klassifizieren.
-Das ü\-ber\-ge\-ord\-ne\-te Forschungsproblem ergibt sich aus der, in der Fachliteratur fehlenden, umfassenden Ü\-ber\-sicht über diese Klassifizierungsarten, die die verschiedenen Autoren liefern.
+Bereits seit mehreren Jahrzehnten werden die Faktoren, welche den Erfolg von IS-Projekten positiv beeinflussen, untersucht.\footnote{fortune white 2006}
+Dabei wurden unterschiedliche Arten gefunden, diese \ac{EF} in Gruppen einzuordnen und somit zu klassifizieren.
+Daraus ergibt sich ein theoretisches Erkenntnissdefizit, da es keine einheitliche, anerkannte Liste von \ac{EF} gibt. Dies kann wiederum dazu führen, dass
+die Häufigkeit, mit der Projekte scheitern oder aus dem Zeit- bzw. Kostenrahmen laufen, steigt, da den Projektverantwortlichen die \ac{EF} nicht ausreichend bekannt sind.\footnote{Sudhakar S. 538}\todo{sinn rein bringen!}
+Ein Problem für die Forschung ergibt sich aus der, in der Fachliteratur fehlenden, umfassenden Übersicht über diese Klassifizierungsarten, die die verschiedenen Autoren liefern.
 Dieser Mangel erschwert die strukturierte Erfassung der maßgeblichen Komponenten, die das Gelingen eines IS-Projektes positiv beeinflussen und begünstigt somit die Wahrscheinlichkeit des Scheiterns dieser Projekte.
 Der Mehrwert einer solchen Zusammenfassung besteht in der Möglichkeit, die Ergebnisse einer retrospektiven Analyse und die Gründe des Projekterfolgs leichter einzuordnen.
 \\Zur Erstellung einer oben beschriebenen Übersicht muss man sich die folgende Frage stellen:
 \textit{Welche unterschiedlichen Klassifizierungsarten von Erfolgsfaktoren von IS-Projekten werden in der Fachliteratur aufgezeigt und wie werden die Ansätze begründet?}\\
-Hieraus definiert sich das eigentliche Forschungsproblem:
-Die weitere Forschung im Bereich der Erfolgsfaktorenklassifizierung würde sich einfacher gestalten, wenn es eine Übersicht über die bereits vorherrschenden Klassifizierungsarten von Erfolgsfaktoren gäbe.
-Ein systematisches Literraturreview kann dazu beitragen, die bereits bestehenden Klassifizierungen zu extrahieren und eventuell Defizite oder Forschungslücken aufzeigen.
-Eine aus diesem Review resultierende Übersicht über die in der Fachliteratur aufgeführten Klassifizierungsarten von Erfolgsfaktoren in IS-Projekten würde zur Lösung des übergeordneten Forschungsproblems beitragen.
+Hieraus definiert sich das Forschungsproblem:
+Die weitere Forschung im Bereich der Erfolgsfaktorenklassifizierung gestaltet sich schwierig, da
+verschiedene, uneinheitliche Ansätze der Klassifizierung von Erfolgsfaktoren existieren und es darüber hinaus keine Übersicht über die bereits \todo{Nomen, vorhandenen klein} Vorhandenen gibt.
+Ein systematisches Literraturreview kann dazu beitragen, die bereits bestehenden Klassifizierungen zu extrahieren 
+und eventuell Defizite oder Forschungslücken aufzeigen.
+Eine aus diesem Review resultierende Übersicht über die in der Fachliteratur aufgeführten \KAS von 
+Erfolgsfaktoren in IS-Projekten würde zur Lösung des Forschungsproblems beitragen.
