--- a/kapitel/02_Zielsetzung.tex
+++ b/kapitel/02_Zielsetzung.tex
@@ -1,3 +1,5 @@
-Das Hauptziel dieser Bachelorarbeit ist es, der Unübersichtlichkeit der Klassifizierungsarten von Erfolgsfaktoren in IS-Pojekten entgegenzuwirken.\\
-Dazu ist zunächst zu klären, welche Arten in der Fachliteratur aufgezeigt werden. Zu\-sätz\-lich gilt es aufzuschlüsseln, welche Erklärungen die
-jeweiligen Autoren für ihre Ansätze anbringen.
+Das Ziel dieser \BA ist es, der Unübersichtlichkeit der \KAS von \EF in 
+\ISPS entgegenzuwirken, indem eine Übersicht über die in der Fachliteratur vorhandenen \KAS erstellt wird.\\
+Diese Übersicht soll zunächst aufzeigen, welche Ansätze zur Klassifizierung von den einzelnen Autoren angebracht werden.
+Die Güte einer \KA lässt sich zum Beispiel an den Erklärungen und Begründungen des Autors messen. Daher werden diese, falls vorhanden, in die
+Übersicht mit aufgenommen.\todo{weiteres Ziel: Schnittmenge}
