--- a/kapitel/04_Vorgehensweise.tex
+++ b/kapitel/04_Vorgehensweise.tex
@@ -1,13 +1,13 @@
-Um einen Überblick über die in der Fachliteratur verwendeten Klassifikationen von Erfolgsfaktoren in IS-Projekten zu schaffen, wird ein 
-systematisches Literaturreview durchgeführt. Dazu werden die Online-Portale von ACM digital library, AIS Electronic Library (AISeL), 
-EBSCOhost("`Academic Search Complete” und "`Business Source Complete"), EmeraldInsight, IEEEXplore, ProQuest, ScienceDirect, SpringerLink und 
-Wiley InterScience nach relevanten Texten durchsucht. Die Titel, Schlagwörter oder Zusammenfassungen der Literatur
-sollen eine logische Verknüpfung der folgenden Begriffe enthalten: Erfolgsfaktor, Projekt, Software, Informationssystem und Informationstechnologie. 
-Dabei muss darauf geachtet werden, dass sowohl die verschiedenen englischen Schreibweisen der Begriffe abgedeckt werden, als auch, dass „Success Factor“ und „Project“ und
-mindestens einer der Begriffe „Software“, “Information System“ oder „Information Technology“ enthalten ist.\\ 
-Die gefundenen Ergebnisse werden dann in einer Tabelle redundanzfrei festgehalten. Beim Lesen der Abstracts und gegebenenfalls der Texte wird festgestellt, ob diese sich tatsächlich auf den 
-gewünschten Sachverhalt beziehen. Suchergebnisse, die in keinerlei inhaltlichem Zusammenhang zur Thematik stehen, werden hierbei verworfen.
-Sollte in diesen Texten auf noch nicht berücksichtigte, relevante Literatur verwiesen werden, so wird diese nachgetragen.
-Darauf folgt ein intensives Studium der relevanten Texte, in welchem die von den Autoren aufgezeigten Klassifizierungsarten und Begründungen extrahiert werden.
-
-
+Um einen Überblick über die in der Fachliteratur verwendeten Klassifikationen von \EF in IS-Projekten zu schaffen, wurde ein 
+systematisches Literaturreview in den Datenbanken von AIS Electronic Library (AISeL), 
+EBSCOhost("`Academic Search Complete” und "`Business Source Complete"), ProQuest und ScienceDirect durchgeführt.
+Dabei wurden jeweils die Titel, Schlagwörter und Abstracts nach den Begriffen 
+"`Erfolgsfaktor"', "`Projekt"' und "`Informationssystem"', welche mit einem logischen UND verknüpft waren, durchsucht. 
+Hierbei mussten die verschiedenen englischen Schreibweisen der Begriffe verwendet, sowie Plural und Synonyme abgedeckt werden.
+Zum Beispiel wurden als Synonyme für Informationssystem auch die Begriffe "`Software"' und "`Informationstechnologie"' bzw. "`Information Technology"' verwendet.\\
+Die gefundenen Ergebnisse wurden dann in einer Tabelle redundanzfrei festgehalten und einem weiteren Auswahlprozess unterzogen:
+Nur Literatur, die sich schwerpunktmäßig mit \EF und deren Klassifizierung beschäftigt, sollte weiter betrachtet werden.
+Dies wurde durch das Lesen des Abstracts festgestellt. Bei Unklarheiten wurden zusätzlich einzelne Textabschnitte,
+vorrangig z.B. die Einleitung oder das Fazit, berücksichtigt.
+Darauf folgte ein intensives Studium der verbliebenen Texte, in welchem die von den Autoren aufgezeigten Klassifizierungsarten und Begründungen extrahiert wurden.
+\todo{In diesen Texten zitierte, relevante, jedoch noch nicht berücksichtigte Literatur wurde zusätzlich in das Studium aufgenommen.}
