--- a/kapitel/Acronyms.tex
+++ b/kapitel/Acronyms.tex
@@ -1,7 +1,6 @@
-\section*{Abkürzungsverzeichnis}
-\renewcommand{\bflabel}[1]{{#1\hfill}}
-\begin{acronym}[Kernbegriffe]
+\begin{acronym}
  \acro{EF}{Erfolgsfaktor}
+ \acro{KA}{Klassifizierungsart}
  \acro{IS}{Informationssystem}
  \acro{IT}{Informationstechnologie}
 \end{acronym}
