--- a/titlepages/Title.tex
+++ b/titlepages/Title.tex
@@ -9,7 +9,8 @@ Peter Praeder
 % Bacheloararbeit
 \begin{center}
 \textbf{
-Exposé zur Bachelorarbeit}
+Bacheloararbeit\linebreak
+im Fach Allgemeine Wirtschaftsinformatik}
 \end{center}
 
 \vspace*{20mm}
