--- a/kapitel/Definition_Projekt.tex
+++ b/kapitel/Definition_Projekt.tex
@@ -1,5 +1,3 @@
-Unter dem Begriff Projekt versteht man ein "`Vorhaben, das im Wesentlichen durch die Einmaligkeit der Bedingungen in ihrer
-Gesamtheit gekennzeichnet ist, wie z.B. Zielvorgabe, zeitliche, finanzielle,
-personelle und andere Begrenzungen; Abgrenzung gegenüber anderen Vorhaben;
-projektspezifische Organisation"\footnote{\cite{DIN.200901}.}
-, beziehungsweise ein zeitlich definiertes Vorhaben, das unternommen wird, um eindeutige Produkte, Dienstleistungen oder Ergebnisse zu erstellen.\footnote{Vgl. \cite{ProjectManagementInstitute.2008} S.5.}
+Unter dem Begriff Projekt versteht man ein zeitlich definiertes Vorhaben, welches unternommen wird,
+um eindeutige Produkte, Dienstleistungen oder Ergebnisse zu erstellen.\footnote{Vgl. \cite{ProjectManagementInstitute.2008} S.5.}
+Ein Projekt ist im Wesentlichen durch die Einmaligkeit der Bedingungen in ihrer Gesamtheit gekennzeichnet, wie z.B. Zielvorgaben, zeitliche,finanzielle und personelle Begrenzungen.\footnote{Vgl. \cite{DIN.200901} S.11.}
