slevin und pinto fertig

--- a/document.tex
+++ b/document.tex
@@ -158,10 +158,10 @@
 \input{kapitel/Acronyms.tex}
 
 %--------------Abbildungsverzeichnis-------------------------------------------------
-\clearpage
-\phantomsection
-\addcontentsline{toc}{section}{Abbildungsverzeichnis}
-\listoffigures
+%\clearpage
+%\phantomsection
+%\addcontentsline{toc}{section}{Abbildungsverzeichnis}
+%\listoffigures
 
 %--------------Tabellenverzeichnis-------------------------------------------------
 \clearpage
@@ -184,6 +184,7 @@
 \subsection{Aufbau der Arbeit}
 \input{kapitel/05_Aufbau.tex}
 %--------------Grundlagen-------------------------------------------------
+\clearpage
 \section{Grundlagen}
 \subsection{Begriffsdefinitionen}
 
@@ -208,7 +209,7 @@
 %--------------Hauptteil-------------------------------------------------
 \clearpage
 \section{Klassifizierungsarten in der Literatur}
-Im Folgenden werden zunächst die verschiedenen Arten, Erfolgsfaktoren zu klassifizieren mitsamt der Begründung der Autoren dargestellt.
+Im Folgenden werden zunächst die verschiedenen Arten der Klassifizierung von Erfolgsfaktoren in \ISPS mitsamt der Begründung der Autoren dargestellt.
 Auf dieser Basis wird anschließend eine Übersicht erstellt und eine Schnittmengenbetrachtung vorgenommen. 
 \subsection{Klassifizierungsarten und deren Begründungen}
 %--------------Arten-------------------------------------------------
