--- a/kapitel/04_Vorgehensweise.tex
+++ b/kapitel/04_Vorgehensweise.tex
@@ -5,11 +5,11 @@ Dabei wurden jeweils die Titel, Schlagwörter und Abstracts nach den Begriffen
 "`Erfolgsfaktor"', "`Projekt"' und "`Informationssystem"', welche mit einem logischen UND verknüpft waren, durchsucht. 
 Hierbei mussten die verschiedenen englischen Schreibweisen der Begriffe verwendet, sowie Plural und Synonyme abgedeckt werden.
 Zum Beispiel wurden als Synonyme für Informationssystem auch die Begriffe "`Software"' und "`Informationstechnologie"' bzw. "`Information Technology"' verwendet.\\
-Die gefundenen Ergebnisse wurden dann in einer Tabelle redundanzfrei festgehalten und einem weiteren Auswahlprozess unterzogen:
+Die gefundenen Ergebnisse wurden daraufhin in einer Tabelle redundanzfrei festgehalten und einem weiteren Auswahlprozess unterzogen:
 Nur Literatur, die sich schwerpunktmäßig mit \EF und deren Klassifizierung beschäftigt, sollte weiter betrachtet werden.
 Dies wurde durch das Lesen des Abstracts festgestellt. Bei Unklarheiten wurden zusätzlich einzelne Textabschnitte,
 vorrangig z.B. die Einleitung oder das Fazit, berücksichtigt.
 Darauf folgte ein intensives Studium der verbliebenen Texte, in welchem die von den Autoren aufgezeigten Klassifizierungsarten und Begründungen extrahiert wurden.
-Bis dahin nicht betrachtete Veröffentlichungen von Autoren, auf die in den gefundenen Texten verwiesen wird und die sich ebenfalls mit der Elassifizierung von Erfolgsfaktoren
-beschäftigen, werden zusätzlich in das Studium eingezogen. Dabei ist kein ausschließendes Kriterium, dass sich die in den Texten beschriebene Klassifizierung
-primär auf IS-Projekte bezieht, da davon ausgegangen werden kann, dass sich die Ansätze auch auch IS-Projekte anwenden lassen.
+Bis dahin nicht betrachtete Veröffentlichungen von Autoren, auf die in den gefundenen Texten verwiesen wird, und die sich ebenfalls mit der Klassifizierung von Erfolgsfaktoren
+beschäftigen, werden zusätzlich in das Studium eingezogen. Dabei ist kein ausschließendes Kriterium, dass sich die, in den Texten beschriebene, Klassifizierung
+primär auf IS-Projekte bezieht, da davon ausgegangen werden kann, dass sich die Ansätze auch auf IS-Projekte anwenden lassen.
