--- a/kapitel/05_Aufbau.tex
+++ b/kapitel/05_Aufbau.tex
@@ -1,5 +1,7 @@
-Im folgenden Kapitel werden zunächst elementare Grundlagen vermittelt, wie die Definition von Begriffen, die für das Verständnis dieser Arbeit wichtig sind.
-Darauf folgt im dritten Kapitel der Schwerpunkt der Arbeit. Basierend auf dem Literraturreview werden die verschiedene Klassifizierungsarten dargestellt und zum Schluss zu einer 
-Übersicht gruppiert.\todo{schöner}
-
-blablabla autoren chronologisch, da sie gegebenenfalls aufeinander aufbauen
+Im folgenden Kapitel werden zunächst elementare Grundlagen, wie die Definition von Begriffen, die für das Verständnis dieser Arbeit wichtig sind, vermittelt.
+Darauf folgt im dritten Kapitel der Schwerpunkt der Arbeit: Basierend auf dem Literraturreview werden die verschiedene Klassifizierungsarten 
+dargestellt.
+Hierbei werden die Klassifizierungsarten chronologisch nach jeweiligem Erscheinungsdatum vorgestellt, da
+sich die Autoren teilweise aufeinander beziehen beziehungsweise aufbauen.
+In einem weiteren Abschnitt werden diese daraufhin in einer tabellarischen Übersicht präsentiert.
+Anschließend wird in Kapitel vier ein Fazit der herausgearbeiteten \KAS gezogen und die Arbeit abschließend kritisch gewürdigt.
