--- a/kapitel/Definition_Erfolgsfaktor.tex
+++ b/kapitel/Definition_Erfolgsfaktor.tex
@@ -1,4 +1,4 @@
-Erfolgsfaktoren im Alllgemeinen sind eine limitierte Anzahl von Faktoren, deren zufriedenstellendes Ergebnis erfolgreiche und 
+Erfolgsfaktoren im Allgemeinen sind eine limitierte Anzahl von Faktoren, deren zufriedenstellendes Ergebnis erfolgreiche und 
 wettbewerbsfähige Leistung für einzelne Bereiche oder das ganze Unternehmen sicherstellen.\footnote{Vgl. \cite{Bullen.1981} S.7.}
 Bezogen auf Projekte sind dies Schlüsselfaktoren, die den Erfolg des Projektes fördern,\footnote{Vgl. \cite{Buschermohle.2010} zitiert nach \cite{Basten.2012}.} wie
 z.B. Führungskompetenz und Erfahrung des Projektleiters, Kommunikation im Team oder Unterstützung des Managements.\\
