--- a/kapitel/Definition_Klassifizierung.tex
+++ b/kapitel/Definition_Klassifizierung.tex
@@ -1,1 +1,2 @@
-Klassifizierung beschreibt den Prozess der systematischen Zuweisung ähnlicher Objekte zu Objektklassen.\footnote{Vgl. \cite{Elmasri.2009} S. 118.}
+Klassifizierung beschreibt den Prozess der systematischen Zuweisung ähnlicher Objekte zu Objektklassen.\footnote{Vgl. \cite{Elmasri.2009}, S. 118.}
+Bezogen auf \EF ist eine \KA demnach die Einordnung von \EF in Kategorien.
