--- a/kapitel/Grundlagen.tex
+++ b/kapitel/Grundlagen.tex
@@ -1,11 +1,11 @@
-Rockart\footnote{\cite{Rockart.1979}} entwickelte als einer der Ersten den Ansatz, Erfolgsfaktoren zu identifizieren und Unternehmensleistung zu messen.\footnote{Vgl. für diesen und den folgenden Satz \cite{Chow.2008} S.962.}
+Rockart\footnote{\cite{Rockart.1979}} entwickelte als einer der Ersten den Ansatz, Erfolgsfaktoren zu identifizieren und Unternehmensleistung zu messen.\footnote{Vgl. für diesen und den folgenden Satz \cite{Chow.2008}, S. 962.}
 Bullen und Rockart\footnote{\cite{Bullen.1981}} sowie Rockart und Crescenzi\footnote{\cite{Rockart.1984}} etabliereten und verfeinerten den Ansatz daraufhin.\\
 Seit Beginn der Forschung zu Erfolgsfaktoren von Projekten, wurden immer wieder Auflistungen von Faktoren 
 geliefert, jedoch wurde nur eine geringe Priorität auf das Klassifizieren von EF gelegt.\\\noindent
 Der Vorteil einer solchen Einordnung in Gruppen liegt darin, dass man, anstatt einzelne Erfolgsfaktoren zu analysieren, zunächst die Gruppen identifizieren kann, in die die Faktoren
 einzuordnen sind.\footnote{Vgl. zu diesem und dem folgenden Satz \cite{Belassi.1996}, S. 142.} Daraufhin können dann die kombinierten Auswirkungen der Faktoren auf den Projekterfolg zu bestimmen.
 
-Die Klassifizierung von EF kann jedoch bei der Analyse der Wechselwirkung zwischen diesen und deren Konsequenzen helfen.\footnote{Vgl. \cite{Belassi.1996} S.142.} 
+Die Klassifizierung von EF kann jedoch bei der Analyse der Wechselwirkung zwischen diesen und deren Konsequenzen helfen.\footnote{Vgl. \cite{Belassi.1996}, S. 142.} 
 
 
 
