--- a/kapitel/arten/daniel1961.tex
+++ b/kapitel/arten/daniel1961.tex
@@ -2,8 +2,8 @@
 \subsubsection{Klassifizierung nach Daniel (1961)}
 \textit{Vorgehehen:}\\\noindent
 ???Daniel liefert keine Klassifizierung von Erfolgsfaktoren, da es den Begriff zu diesem Zeitpunkt noch gar nicht gibt???
-Daniel ist der Erste, der überhaupt von Erfolgsfaktoren im Bezug auf Informationssysteme spricht.\footnote{Vgl. \cite{Daniel.1961}, S. 116.}
-Er unterteilt diese dabei in folgende Kategorien:\footnote{Vgl. zu dieser Liste \cite{Daniel.1961}, S. 113, 114, 117.}
+Daniel ist einer der Ersten, der überhaupt von Erfolgsfaktoren im Bezug auf Informationssysteme spricht.\footnote{Vgl. \cite{Daniel.1961}, S. 116.}
+Er unterteilt diese dabei in die folgenden zwei Kategorien:\footnote{Vgl. zu dieser Liste \cite{Daniel.1961}, S. 113, 114, 117.}
 \begin{itemize}\itemsep0pt
 \item[-]Planung,
 \item[-]Kontrolle.
@@ -19,7 +19,7 @@ Innerhalb der Gruppe Planung unterteilt er auf einer weiteren Ebene:\footnote{Vg
 Auf Seiten der Kontrollfaktoren gruppiert er noch in finanzielle und nicht-finanzielle Daten.\todo{mehr}
 \\\noindent
 \textit{Begründung:}\\\noindent
-Daniel liefert keine gesonderte Begründung für seinen Ansatz. Er ist jedoch der Erste, der von Erfolgsfaktoren im Bezug auf 
+Daniel liefert keine gesonderte Begründung für seinen Ansatz. Er ist jedoch einer der Ersten, der von Erfolgsfaktoren im Bezug auf 
 Informationssysteme spricht.
-Er führt an, dass das Problem, dass viele Projekte scheitern???, in der Lücke zwischen statischen Informationssystemen und
+Daniel argumentiert, dass das Problem der hohen Anzahl von scheiternden Projekten in der Lücke zwischen statischen \todo{besser}Informationssystemen(Buchführungssystemen) und
 sich wandelnden Unternehmensstrukturen liegt.\footnote{Vgl. \cite{Daniel.1961}, S. 111.}
