--- a/kapitel/arten/rockart1979.tex
+++ b/kapitel/arten/rockart1979.tex
@@ -1,7 +1,7 @@
 \noindent
 \subsubsection{Klassifizierung nach Rockart (1979)}
 \textit{Vorgehehen:}\\\noindent
-In seiner Studie unterteilt Rockart Erfolgsfaktoren in folgende Gruppen:\footnote{Vgl. zu dieser Liste \cite{Rockart.1979}, S. 92.}
+Rockart nimmt in seiner Studie eine Unterteilung von Erfolgsfaktoren\todo{welche Projekte etc} in folgende Gruppen vor:\footnote{Vgl. zu dieser Liste \cite{Rockart.1979}, S. 92.}
 \begin{itemize}\itemsep0pt
 \item[-]Faktoren bezüglich der Kontrolle,
 \item[-]Faktoren bezüglich der Erstellung.
@@ -9,5 +9,5 @@ In seiner Studie unterteilt Rockart Erfolgsfaktoren in folgende Gruppen:\footnot
 \textit{Begründung:}\\\noindent
 Rockart liefert keine explizite Begründung für seinen Ansatz, geht jedoch in seinem gesamten Artikel auf die
 generelle Relevanz von Erfolgsfaktoren ein. 
-Hierzu führt er an, dass z.B. die Identifikation von Erfolgsfaktoren eine klare Definition
-über den Umfang der zu beschaffenden Informationen ermöglicht und eine teure Mehraquise beschränkt.\footnote{Vgl. \cite{Rockart.1979}, S. 87.}
+Hierzu führt er an, dass z.B. die Identifikation von Erfolgsfaktoren eine präzisere Einschätzung
+des Umfangs der zu beschaffenden Informationen ermöglicht und somit eine teure Mehraquise einschränkt.\footnote{Vgl. \cite{Rockart.1979}, S. 87.}
