--- a/kapitel/arten/slevin_pinto1987.tex
+++ b/kapitel/arten/slevin_pinto1987.tex
@@ -1,13 +1,33 @@
 \noindent
 \subsubsection{Klassifizierung nach Slevin und Pinto (1987)}
 \textit{Vorgehen:}\\\noindent
-Slevin und Pinto liefern eine Liste von 10 Erfolgsfaktoren für die erfolgreiche Implementierung von Projekten, welche sie in folgende
-Gruppen einordnen:\footnote{Vgl. zu dieser Liste \cite{Slevin.1987}, S. 3.}
+SLevin und Pinto beziehen sich in ihrer Studie auf Erfolgsfaktoren im allgemeinen Projektmanagement.
+Slevin und Pinto liefern eine Liste von zehn Erfolgsfaktoren für die erfolgreiche Implementierung
+von Projekten, welche sie zunächst zwei verschiedenen Projektphasen zuordnen.\footnote{Vgl. zu diesem und dem folgenden Satz \cite{Slevin.1987}, S. 3.} 
+Die Faktoren \textit{Projektrichtung}, \textit{Top-Management-Unterstützung} und \textit{Zeitplan} teilen sie in die Planungsphase eines Projektes ein. 
+Die restlichen sieben \EF,wie zum Beispiel Kundenkonsultation, technische Aufgaben oder Akzeptanz des 
+Kunden,\footnote{Vgl. zu den Erfolgsfaktoren \cite{Slvein.1987}, S. 2.} ordnen die Autoren der Implementierungs - 
+bzw. Aktionsphase zu.\\\noindent
+Alle \EF klassifizieren sie schließlich in:\footnote{Vgl. zu dieser Liste \cite{Slevin.1987}, S. 3.}
 \begin{itemize}\itemsep0pt
 \item[-]Strategische Faktoren,
 \item[-]Taktische Faktoren.
 \end{itemize}
 Die strategischen Faktoren beziehen sich dabei auf das Aufstellen von übergeordneten Zielen und die Planung, wie diese zu erreichen sind.\footnote{Vgl. zu diesem und dem folgenden Satz \cite{Slevin.1987}, S. 3.}
-Zu den taktischen Faktoren zählen Slevin und Pinto die menschlichen, technischen und Finanziellen Ressourcen, die zum erreichen der
-strategischen Ziele nötig sind.
-\\\noindent\textit{Begründung:}\\\noindent
+Zu den taktischen Faktoren zählen, laut Slevin und Pinto, die menschlichen, technischen und finanziellen Ressourcen, die zur Erreichen der
+strategischen Ziele notwendig sind. Aufbauend auf diesem Konzept entwickeln Slevin und Pinto eine Agenda mit fünf Schritten, die, bezüglich
+der Klassen Strategie und Taktik, die Wahrscheinlichkeit einer erfolgreichen Implementierung erhöhen:\footnote{Vgl. zu diesem Satz und der Liste \cite{Slevin.1987}, S. 8-9.}
+\begin{itemize}\itemsep0pt
+\item[1.]Nutzen eines Multi-Faktor-Modells
+\item[2.]Frühes strategisches Denken im Projektlebenszyklus
+\item[3.]Im fortschreitenden Lebenszyklus mehr taktisches Denken
+\item[4.]Bewusste Planung und Kommunikation des Übergangs von Strategie zu Taktik
+\item[5.]Fokus gleichermaßen auf Strategie und Taktik
+\end{itemize}
+\noindent\textit{Begründung:}\\\noindent
+Laut Slevin und Pinto setzt ihr Modell am ersten Schritt der Agenda an, da
+es für Projektmanager essentiell sei, mehrere Faktoren gleichzeitig zu berücksichtigen.\footnote{Vgl. zu diesem Satz und dem Rest des Absatzes \cite{Slevin.1987}, S. 8.}
+Ihr Studie bietet zehn Erfolgsfaktoren in einem Rahmenkonzept zur Projektimplementierung.
+Innerhalb dieses Rahmenkonzeptes werden verschiedenen Faktoren, abhängig von Phase des Projektes, unterschiedliche Relevanz zugeordnet.
+Die Priorisierung der \EF erfolgt also sowohl abhängig von zeitlichem Status des Projektes, als auch von der Kategorie des Faktors.
+
